[tool.poetry]
name = "drive"
version = "0.3.2"
description = "Google Drive client"
authors = ["Baptiste Fontaine <baptiste@bixoto.com>"]
license = "MIT"
include = ["drive/py.typed"]
readme = "README.md"
packages = [
    { include = "drive" },
]
classifiers = [
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
]

[tool.poetry.dependencies]
python = "^3.10"
google-api-python-client = "^2.64.0"
httplib2 = "^0.20.4"
oauth2client = "^4.1.3"
openpyxl = "^3.0.10"
python-magic = "^0.4.27"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
pytest-cov = "^4.0.0"

[tool.coverage.report]
omit = ["tests/*"]
exclude_lines = [
    "pragma: nocover",
    "raise NotImplementedError",
    "except ImportError:",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
