[tool.poetry]
name = "drive"
version = "0.4.5"
description = "Google Drive client"
authors = ["Baptiste Fontaine <b@ptistefontaine.fr>"]
license = "MIT"
include = ["drive/py.typed"]
readme = "README.md"
packages = [
    { include = "drive" },
]
classifiers = [
    'License :: OSI Approved :: MIT License',
    'Development Status :: 5 - Production/Stable',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
]

[tool.poetry.dependencies]
python = "^3.9"
google-api-python-client = "^2.64.0"
httplib2 = "^0.20.4"
oauth2client = "^4.1.3"
openpyxl = "^3.0.10"
python-magic = "^0.4.27"
python-magic-bin = { version = "^0.4.14", platform = "windows" }

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^5.0"
mypy = "^1.15"
types-openpyxl = "*"
types-httplib2 = "*"
ruff = "^0.11.2"

[tool.coverage.report]
omit = ["tests/*"]
exclude_lines = [
    "pragma: nocover",
    "raise NotImplementedError",
    "except ImportError:",
]

[tool.ruff]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
